Configured Jackson to use JAXB annotations.